--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-    "$schema": "https://json.schemastore.org/package.json",
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.4"
+        "@inertiajs/vue3": "^1.2.0",
+        "@tailwindcss/forms": "^0.5.7",
+        "@vitejs/plugin-vue": "^5.0.4",
+        "autoprefixer": "^10.4.17",
+        "axios": "^1.6.7",
+        "laravel-vite-plugin": "^1.0.2",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
+        "vite": "^5.1.0",
+        "vite-plugin-pwa": "^0.19.2",
+        "vue": "^3.4.19"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.1",
+        "vue-chartjs": "^5.3.0",
+        "ziggy-js": "^2.1.0"
     }
 }
